# cubostratus

./: Cargo.toml  README.md  cubostratusc.toml
src/: aggregator.rs  collector.rs  config.rs  error.rs  lib.rs  main.rs  value.rs
src/state/: cgroups.rs  mod.rs  parsers.rs  thread.rs
src/syscall/: mod.rs  syscall_table.rs
