[package]
name = "cubostratusc"
version = "0.1.0"
authors = ["Nedim Šabić <bhnedo@hotmail.com>"]
description = "Blazingly fast Linux syscall collector"

[dependencies]
nix = "0.7.0"
libc = "0.2.20"
num_cpus = "1.2.1"
chrono = { version = "0.3.0", features = ["serde"] }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
kafka = "0.5"